cp project/force-app/main/default/objects/Lead_Assignment_History__c/Lead_Assignment_History__c.object-meta.xml
<CustomObject>
    <label>Lead Assignment History</label>
    <nameField>
        <displayFormat>LAH-{0000}</displayFormat>
        <label>Lead Assignment History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assignment Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>