cp project/force-app/main/default/objects/Lead_Assignment_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Assignment Historys</relationshipLabel>
    <relationshipName>Lead_Assignment_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>