cp project/force-app/main/default/objects/Lead_Assignment_History__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Assignment</fullName>
            </value>
            <value>
                <fullName>Manual Transfer</fullName>
            </value>
            <value>
                <fullName>Workload Balancing</fullName>
            </value>
            <value>
                <fullName>Territory Change</fullName>
            </value>
            <value>
                <fullName>Manager Decision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>